# EasyNetService

./: .gitignore  CMakeLists.txt  README.md
App/: CMakeLists.txt  Client.cpp  Manager.cpp  Server.cpp  Test.cpp
QtGUI/: CMakeLists.txt  ENSCientGUI.pro  EnsRC.qrc  addappconfig.cpp  addappconfig.h  addappconfig.ui  configapp.cpp  configapp.h  configapp.ui  configtcpport.cpp  configtcpport.h  configtcpport.ui  editterminalcmd.cpp  editterminalcmd.h  editterminalcmd.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  selectcmd.cpp  selectcmd.h  selectcmd.ui  version.cpp  version.h  version.ui  widgets_zh_CN.qm  zh_EN.qm  zh_EN.ts
Src/: CMakeLists.txt
Src/Client/: ClientSocketAction.cpp  ClientSocketAction.h  EasyNetServiceClient.cpp  EasyNetServiceClient.h
Src/Log/: Log.cpp  Log.h
Src/Server/: CMakeLists.txt  EasyNetServiceServer.cpp  EasyNetServiceServer.h  FileOpt.cpp  FileOpt.h  ServerSocketAction.cpp  ServerSocketAction.h  ServiceNode.cpp  ServiceNode.h
Src/Socket/: IpInfo.cpp  IpInfo.h  SocketInclude.h  SocketService.cpp  SocketService.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  UDPClient.cpp  UDPClient.h  UDPServer.cpp  UDPServer.h
Src/cJSON/: JsonOpt.cpp  JsonOpt.h
doc/Logo/: logo.icns
doc/md/: help.html  help.md
doc/src/: nettest.cpp  test.c
shell/: ens.service
